--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.datasource.url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 spring.datasource.username=spring_boot_mybatis
 spring.datasource.password=admin123
 
-spring.data.mongodb.uri=mongodb://localhost:27017/spring-data
+
 
 spring.jackson.serialization.write_dates_as_timestamps=false
 spring.jackson.serialization.indent_output=true
@@ -38,3 +38,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.formate-sql=true
 
+#spring data mongodb
+spring.data.mongodb.uri=mongodb://localhost:27017/spring-data
